--- a/LNS/CMakeLists.txt
+++ b/LNS/CMakeLists.txt
@@ -4,14 +4,21 @@ add_library(
     src/LNS.cpp
 )
 
+set_target_properties(
+    LNS
+    PROPERTIES
+    POSITION_INDEPENDENT_CODE 1
+)
+
 target_include_directories(
     LNS
     PUBLIC    
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> 
         $<INSTALL_INTERFACE:include>
+        ${SPDLOG_INCLUDE_DIR}
 )
-set_target_properties(
+
+target_link_libraries(
     LNS
-    PROPERTIES
-    POSITION_INDEPENDENT_CODE 1
+    spdlog::spdlog
 )
