--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,45 @@
 cmake_minimum_required(VERSION 3.14)
 project(LearnNewShit)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
-
 if(MSVC)
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Sandbox)
+	add_definitions(-DLNS_PLATFORM_WINDOWS)
 endif()
 
 find_path(
 	SPDLOG_INCLUDE_DIR
 	NAMES spdlog/spdlog.h
-	PATHS ${CMAKE_CURRENT_SOURCE_DIR}/vendor/spdlog/
-	PATH_SUFFIXES include
-	)
-if((SPDLOG_INCLUDE_DIR-NOTFOUND))
+	PATHS ${CMAKE_CURRENT_SOURCE_DIR}/vendor/spdlog/include
+)
+
+if((SPDLOG_INCLUDE_DIR-NOTFOUND) OR (NOT EXISTS ${SPDLOG_INCLUDE_DIR}))
+
 	message("Unable to find spdlog")
 
 	execute_process(COMMAND git submodule update --init -- vendor/spdlog
 					WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+			
+	find_path(
+		SPDLOG_INCLUDE_DIR
+		NAMES spdlog/spdlog.h
+		PATHS ${CMAKE_CURRENT_SOURCE_DIR}/vendor/spdlog/include
+	)		
 	add_subdirectory(vendor/spdlog)
 	
 else()
-	message("find spdlog ${SPDLOG_INCLUDE_DIR}")
+	message("Found spdlog at ${SPDLOG_INCLUDE_DIR}")
 	add_subdirectory(vendor/spdlog)
 endif()
 
-
-add_subdirectory(Sandbox)
 add_subdirectory(LNS)
+add_subdirectory(Sandbox)
+
+set_target_properties(LNS
+    PROPERTIES
+        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/$<CONFIG>/lib
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/$<CONFIG>/bin
+)
+set_target_properties(Sandbox
+		PROPERTIES
+		RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/$<CONFIG>/bin
+)
